Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubehwservice-deployment
  labels:
    app: kubehwservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubehwservice
  template:
    metadata:
      labels:
        app: kubehwservice
    spec:
      containers:
      - name: kubehwservice
        image: flipmachin1001/kubehwservice:v1
        ports:
        - containerPort: 80 
        livenessProbe:
         httpGet:
          path: /hc
          port: 8000
         initialDelaySeconds: 3
         periodSeconds: 3
