Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myhw
spec:
  type: ClusterIP
  selector:
    app: kubehwservice
  ports:
  - port: 80
    targetPort: 8000
