Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myhw  
spec:
  rules:
  - host: "arch.homework"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myhw
            port:
              number: 80
